# ace-music-studio

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  SKILLS.md  ace_pipeline.py  app.py  backend.py  lora_stack.py  lyrics_lm.py  modes.py  post_process.py  pyproject.toml  requirements-mac.txt  requirements.txt  setup.sh  theme.py  tooltips.py  ui.py
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-18-ace-music-studio.md
docs/superpowers/specs/: 2026-05-18-ace-music-studio-design.md
docs/superpowers/specs/mockups/: 01_generate_mobile_errors.html  02_cover_extend.html  03_edit_lyrics.html  README.md
presets/: manifest.json
research/: 00_executive_summary.md  01_yue.md  02_diffrhythm.md  03_acestep.md  04_newcomers_and_survey.md  05_apple_silicon_mps_audit.md  06_comparison_matrix.md  07_platform_architecture.md
tests/: conftest.py  test_ace_pipeline.py  test_ace_pipeline_lazy.py  test_backend.py  test_gpu_estimator.py  test_lora_presets.py  test_lora_stack.py  test_lyrics_lm.py  test_modes_generate.py  test_modes_other.py  test_post_process.py  test_preload_repos.py  test_smoke_gpu.py  test_theme.py
