[project]
name = "ace-music-studio"
version = "0.1.0"
description = "Open-source full-song generation studio wrapping ACE-Step 1.5 XL"
authors = [{ name = "Mayank Gupta" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.12"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-m 'not gpu' --tb=short"
markers = ["gpu: requires a real GPU/MPS device; opt in with -m gpu"]
testpaths = ["tests"]
